@@ -103,10 +103,11 @@
    <table>
 
       <tr><td class="tableheader" colspan="3">Bootstrappers</td></tr>
-      <tr><td rowspan="5" width="1%">&nbsp;</td><td class="tableheader">Plugin Name</td><td class="tableheader">Class Name</td></tr>
+      <tr><td rowspan="6" width="1%">&nbsp;</td><td class="tableheader">Plugin Name</td><td class="tableheader">Class Name</td></tr>
       <tr><td>currentbuildstatusbootstrapper</td><td>net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusBootstrapper</td></tr>
       <tr><td>cvsbootstrapper</td><td>net.sourceforge.cruisecontrol.bootstrappers.CVSBootstrapper</td></tr>
       <tr><td>p4bootstrapper</td><td>net.sourceforge.cruisecontrol.bootstrappers.P4Bootstrapper</td></tr>
+      <tr><td>svnbootstrapper</td><td>net.sourceforge.cruisecontrol.bootstrappers.SVNBootstrapper</td></tr>
       <tr><td>vssbootstrapper</td><td>net.sourceforge.cruisecontrol.bootstrappers.VssBootstrapper</td></tr>
       
       <tr><td>&nbsp;</td></tr>
@@ -130,12 +131,13 @@
 
       <tr><td>&nbsp;</td></tr>
       <tr><td class="tableheader" colspan="3">Source Controls</td></tr>
-      <tr><td rowspan="10" width="1%">&nbsp;</td><td class="tableheader">Plugin Name</td><td class="tableheader">Class Name</td></tr>
+      <tr><td rowspan="11" width="1%">&nbsp;</td><td class="tableheader">Plugin Name</td><td class="tableheader">Class Name</td></tr>
       <tr><td>clearcase</td><td>net.sourceforge.cruisecontrol.sourcecontrols.ClearCase</td></tr>
       <tr><td>cvs</td><td>net.sourceforge.cruisecontrol.sourcecontrols.CVS</td></tr>
       <tr><td>filesystem</td><td>net.sourceforge.cruisecontrol.sourcecontrols.FileSystem</td></tr>
       <tr><td>pvcs</td><td>net.sourceforge.cruisecontrol.sourcecontrols.PVCS</td></tr>
       <tr><td>starteam</td><td>net.sourceforge.cruisecontrol.sourcecontrols.StarTeam</td></tr>
+      <tr><td>svn</td><td>net.sourceforge.cruisecontrol.sourcecontrols.SVN</td></tr>
       <tr><td>vss</td><td>net.sourceforge.cruisecontrol.sourcecontrols.Vss</td></tr>
       <tr><td>vssjournal</td><td>net.sourceforge.cruisecontrol.sourcecontrols.VssJournal</td></tr>
       <tr><td>mks</td><td>net.sourceforge.cruisecontrol.sourcecontrols.MKS</td></tr>
